# xkcd-wallpaper-v2.rs

./: .gitignore  Cargo.toml  README.md
routes/: Cargo.toml
routes/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
service/: Cargo.toml
service/src/: lib.rs
src/: err.rs  error.rs  lib.rs  main.rs  routes.rs  wallpaper.rs  xkcd.rs
wallpaper/: Cargo.toml
wallpaper/src/: lib.rs  wallpaper.rs
