[package]
name = "oxabz-xkcd-wallpaper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = {version = "0.11", features = ["json"]}
anyhow = "1.0"
thiserror = "1.0.40"
image = {version = "0.24.5", default-features = false, features = ["png"]}
regex = "1.7"
warp = "0.3"
shuttle-runtime = { version = "0.13" }
shuttle-warp = { version = "0.13" }
tokio = { version = "1.26.0" }
log = "0.4"